--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -37,4 +37,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest
       run: |
-        python run_tests.py
+        python ${{env.ECE530-2023/unit-test-Fernand-Francur}}/run_tests.py
